# Data-Mining

./: IBM_Fairness.ipynb  LICENSE  README.md
DS5612_PA1/DS5612_PA1/: README.md  pyproject.toml
DS5612_PA1/DS5612_PA1/src/ds5612_pa1/: 01_environment_setup.html  01_environment_setup.ipynb  02_ds_basics.html  02_ds_basics.ipynb  03_exploratory_data_analysis.html  03_exploratory_data_analysis.ipynb  04_basic_visualization.html  04_basic_visualization.ipynb  05_grammar_of_graphics.html  05_grammar_of_graphics.ipynb  README.md  __init__.py  t2_tasks.py  t3_tasks.py  test.ipynb
DS5612_PA1/DS5612_PA1/src/ds5612_pa1/tests/: test_task2.py  test_task3.py
DS5612_PA1/__MACOSX/DS5612_PA1/src/: ._ds5612_pa1
DS5612_PA1/__MACOSX/DS5612_PA1/src/ds5612_pa1/: ._01_environment_setup.html  ._01_environment_setup.ipynb  ._02_ds_basics.html  ._03_exploratory_data_analysis.html  ._05_grammar_of_graphics.html
DS5612_PA2/: README.md  error.txt  pyproject.toml
DS5612_PA2/src/ds5612_pa2/: 00_intro.html  00_intro.ipynb  01_configuration.html  01_configuration.ipynb  02_model_serving.html  02_model_serving.ipynb  03_model_evaluation.html  03_model_evaluation.ipynb  04_error_estimation.html  04_error_estimation.ipynb  05_hyper_parameter_tuning.html  05_hyper_parameter_tuning.ipynb  06_putting_it_together.html  06_putting_it_together.ipynb  07_classification_reports.html  07_classification_reports.ipynb  __init__.py  fake_ignore.py
DS5612_PA2/src/ds5612_pa2/code/: custom_metrics.py  error_estimation.py  hp_configs.py  model_report_template.jinja2  model_reports.py  modern_ml_pipeline.py  output.html  pipeline_configs.py  utils.py
DS5612_PA2/src/ds5612_pa2/code/task2/: fastapi_demo.py  gradio_demo.py  textual_demo.py  typer_demo.py
DS5612_PA2/src/ds5612_pa2/resources/: data_Xy.npz  sample_model_report.html
DS5612_PA2/src/ds5612_pa2/tests/: conftest.py  test_custom_metrics.py  test_error_estimator.py  test_fastapi.py  test_gradio.py  test_hyper_parameter_tuning.py  test_pydantic.py  test_textual.py  test_typer.py
